# pengui

./: .gitignore  CHANGELOG.md  PACKAGING.md  README.md  archive.key.gpg  chown_artisan  compile_resources  configuration.py  create-venv.sh  eggs.yaml  eggs_configuration.py  mainwindow.py  package-pengui  pengui.bin.spec  pengui.desktop  pengui.py  penguin.py  produce .py  produce.py  pyproject.toml  r  requirements.txt  resources_rc.py  run  scode  sucode  temp.sh  terminal.py  wget-log
asset/: eggs.yaml  pengui.desktop
assets/: pengui.desktop  pengui.link  tools.yaml  version
src/: config.py  config_tools.py  config_tools_mine.py  dad.py  dialog_format.py  dialog_get_eggs.py  eggs_configuration.py  peasy.py  pengui.py  produce.py  pseudo_terminal.py  pyproject.toml  pysidedeploy.spec  qterminal.py  resources_rc.py  terminal.py  text_editor.py  utilies.py  utilities.py  version.py  wardrobe_show.py
src/terminals-tempts/: embed.py  test.py
src/ui/: config.ui  config_tools.ui  dad.ui  penGUI.ui  pengui.ui  produce.ui  resources.qrc  terminal.ui  text_editor.ui  ui_config.py  ui_config_tools.py  ui_dad.py  ui_dialog_format_usb.py  ui_eggs_configuration.py  ui_pengui.py  ui_produce.py  ui_text_editor.py  ui_wardrobe_show.py  wardrobe_show.ui
tests/: terminal.py
ui/: __init__.py  configuration.ui  eggs_configuration.ui  mainwindow.ui  produce.ui  resources.qrc  ui_configuration.py  ui_mainwindow.py  ui_penGUI.py  ui_produce.py  ui_terminal.py
